tests/neg/toplevel.scala
println("hello")   // error: Expected a toplevel definition
